@@ -81,6 +81,8 @@ var DEFAULTS = {
   environment: process.env.NODE_ENV || 'development',
   errorOnAbortedRequests: false,
   exitSpanMinDuration: '0ms',
+  // Deprecated: already filtered with `sanitizeFieldNames` defaults
+  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
   filterHttpHeaders: true,
   globalLabels: undefined,
   ignoreMessageQueues: [],
@@ -160,6 +162,8 @@ var ENV_TABLE = {
   elasticsearchCaptureBodyUrls: 'ELASTIC_APM_ELASTICSEARCH_CAPTURE_BODY_URLS',
   errorMessageMaxLength: 'ELASTIC_APM_ERROR_MESSAGE_MAX_LENGTH',
   errorOnAbortedRequests: 'ELASTIC_APM_ERROR_ON_ABORTED_REQUESTS',
+  // Deprecated: already filtered with `sanitizeFieldNames` defaults
+  // TODO: https://github.com/elastic/apm-agent-nodejs/issues/3332
   filterHttpHeaders: 'ELASTIC_APM_FILTER_HTTP_HEADERS',
   frameworkName: 'ELASTIC_APM_FRAMEWORK_NAME',
   frameworkVersion: 'ELASTIC_APM_FRAMEWORK_VERSION',
@@ -400,6 +404,7 @@ class Config {
     this.ignoreMessageQueuesRegExp = []
 
     const isLambda = isLambdaExecutionEnvironment()
+    const envOptions = readEnv()
 
     // If we didn't find a config file on process boot, but a path to one is
     // provided as a config option, let's instead try to load that
@@ -412,7 +417,7 @@ class Config {
       DEFAULTS, // default options
       confFile, // options read from config file
       opts, // options passed in to agent.start()
-      readEnv() // options read from environment variables
+      envOptions // options read from environment variables
     )
 
     // The logger is used later in this function, so create/update it first.
@@ -476,6 +481,14 @@ class Config {
         this.serviceVersion = serviceVersionFromPackageJson()
       } catch (err) {
         // pass
+      }
+    }
+
+    // Warn agent consumer if it passed deprecated options via ENV, start options or config file.
+    const configSources = [envOptions, opts, confFile]
+    for (let i = 0; i < configSources.length; i++) {
+      if (configSources[i] && 'filterHttpHeaders' in configSources[i]) {
+        this.logger.warn('the `filterHttpHeaders` config option is deprecated')
       }
     }
 
